cleaning up the css and scrollbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,11 @@
 }
 
 html, body, #root {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
